plugins {
    id 'java'
    // id 'org.apache.maven.plugins'
    // id("org.jetbrains.intellij") version "1.17.4"
    // id "me.champeau.jmh" version "0.7.2"
}

group = 'landenlabs'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

/*
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
    withSourcesJar()
    withJavadocJar()
}

 */
/*
DOES NOT COMPILE
buildscript {
    classpath('org.openjdk.jmh:jmh-generator-annprocess:1.37')
}
 */

dependencies {
    implementation 'org.openjdk.jmh:jmh-core:1.37'
    implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.openjdk.jmh:jmh-core:1.37'
    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

test {
    useJUnitPlatform()
}